--- a/css/style-contacto.css
+++ b/css/style-contacto.css
@@ -14,6 +14,11 @@
     color: #D9D9D9;
     background-color: black;
 }
+.header-li:hover{
+    font-size: 1.5vw;
+    transition: all 0.2s ease-in;
+
+}
 a {text-decoration: none}
 .body{
     
@@ -22,6 +27,9 @@ a {text-decoration: none}
 }.footer{
 margin-top: 5%;
 
+}
+.footer-contacto{
+    display: none;
 }
 .footer-nav{
     display: flex;
@@ -103,15 +111,30 @@ margin-top: 5%;
     border-bottom:1px solid #d9d9d9;;
 
 }
+.form-inputs-error{
+    border:0;
+    font-size: 1vw;
+    border-bottom:1px solid red;
+}
 .form-checkboxs{
     display: inline-flex;
     align-items: center;
     cursor: pointer;
     font-family: arial;
+    background-color: black;
 }
-.form-button{
-    
+.span_error_forms{
+    color: red;
+    font-size: 0.8vw;    
 
+}
+.span_error_forms_mensaje{
+    text-align: left;
+    color: red;
+    font-size: 0.8vw;
+}
+.contador_mensaje{
+    text-align: right;
 }
 .main-nav-font{
 
@@ -136,6 +159,135 @@ margin-top: 5%;
     height: 100%
 
 }
+@media (max-width: 1000px) {
+    .main-walterphoto{
+        display: none;
+    }
+    .main-jessiephoto{
+        display: none;
+    }
+    div span{
+        font-size: 3vw;
+    }
+    .main-form-inputs{
+        display: flex;
+        align-items:flex-start;
+        flex-direction: column;
+        justify-content: space-around;
+        height:100%;
+        margin-left: 2%;
+
+    }
+    .main-form{
+
+        font-family: "Breaking Bad";
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+
+        height: 900px;
+
+
+    }
+    .main{
+        display: flex;
+        flex-direction: column;
+        justify-items: center;
+    }
+    .form-message{
+        resize: none;
+        height: 25%;
+        font-size: 3vw;
+        border: 1px solid #d9d9d9;
+    }
+    .form-inputs{
+
+        border:0;
+        font-size: 3vw;
+        border-bottom:1px solid #d9d9d9;;
+
+    }
+    .form-button{
+        font-size: 5vw;
+    }
+    .form-inputs-error{
+        border:0;
+        font-size: 6vw;
+        border-bottom:1px solid red;
+    }
+    .form-checkboxs{
+        display: inline-flex;
+        align-items: center;
+        cursor: pointer;
+        font-family: arial;
+        background-color: black;
+    }
+    .span_error_forms{
+        color: red;
+        font-size: 3vw;
+
+    }
+    .span_error_forms_mensaje{
+        text-align: left;
+        color: red;
+        font-size: 3vw;
+    }
+    /*Modificacin footer y header para hacerlo resposive eliminando algunos elementos y reajustando su tamaño*/
+    .header-li--logo {
+        width: 9vw;
+
+    }
+
+    .header-li {
+        font-size: 3vw;
+        list-style: none;
+        transition: all 0.2s ease-in;
+
+
+    }
+    .header-li:hover{
+        font-size: 3vw;
+        transition: all 0.2s ease-in;
+
+    }
+
+    #header_contacto {
+        display: none;
+    }
+
+    #header_inicio {
+        display: none;
+    }
+
+    .footer-nav {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        font-size: 3vw;
+    }
+
+    .footer-condiciones {
+        display: none;
+    }
+
+    .footer-cookies {
+        display: none;
+    }
+
+    .footer-walter {
+        display: none;
+    }
+
+    .footer-nosotros {
+        display: none;
+    }
+
+    .footer-contacto {
+        display: block;
+    }
+}
+/*-------------------------------*/
+
 .font-breaking-bad{
     font-family: Breaking Bad;
 }
@@ -159,3 +311,4 @@ margin-top: 5%;
     align-self: flex-end;
     
 }
+
