--- a/css/style-personajes.css
+++ b/css/style-personajes.css
@@ -22,6 +22,9 @@
 margin-top: 5%;
 
 }
+.footer-contacto{
+    display: none;
+}
 .footer-nav{
     display: flex;
     align-items: center;
@@ -74,19 +77,88 @@ a {text-decoration: none}
     width: 50%;
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: space-evenly;
     flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 .main-personaje-div{
-    width:  15vw;
-    height: 15*1.15vw;
+    width: 33%;
+    position: relative;
+    padding: 1%;
+    text-align: center;
+    overflow: hidden;
+    
+
 }
 .pesonaje-foto{
-    width:  100%;
-    
-}
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
 
+}
+@media (max-width: 850px) {
+    .main-personajes{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+    }
+    .main-personaje-div{
+        width: 40%;
+        position: relative;
+        padding: 1%;
+        text-align: center;
+        overflow: hidden;
+
+
+    }
+    /*Modificacin footer y header para hacerlo resposive eliminando algunos elementos y reajustando su tamaño*/
+    .header-li--logo{
+        width: 9vw;
+
+    }
+    .header-li{
+        font-size: 3vw;
+        list-style:none;
+        transition: all 0.2s ease-in;
+
+
+    }
+    .header-li:hover{
+        font-size: 3vw;
+        transition: all 0.2s ease-in;
+
+    }
+    #header_contacto{
+        display: none;
+    }
+    #header_inicio{
+        display: none;
+    }
+    .footer-nav{
+        display: flex;
+        align-items: center;
+        justify-content:space-around;
+        font-size: 3vw;
+    }
+    .footer-condiciones{
+        display: none;
+    }
+    .footer-cookies{
+        display: none;
+    }
+    .footer-walter{
+        display: none;
+    }
+    .footer-nosotros{
+        display: none;
+    }
+    .footer-contacto{
+        display: block;
+    }
+    /*-------------------------------*/
+}
 
 .font-breaking-bad{
     font-family: Breaking Bad;
@@ -94,4 +166,12 @@ a {text-decoration: none}
 .font-breaking-bad-title{
     font-family: Breaking Bad;
     font-size: 5vw;
+}.title-personajes{
+    text-align: center;
+    position: relative;
+    bottom :10%;
+    height: 8.7%;
+    width: 100%;
+    background-color: #D9D9D980;
+    color: black;
 }
